--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "ceil-dlp"
-version = "1.1.3"
+version = "1.1.4"
 description = "Data Loss Prevention plugin for LiteLLM: Block and mask PII in LLM requests with zero infrastructure overhead."
 readme = "README.md"
 requires-python = ">=3.11"
@@ -42,14 +42,14 @@ classifiers = [
 ]
 
 dependencies = [
-    "litellm>=1.0.0",
+    "litellm[proxy]>=1.0.0",
     "pyyaml>=6.0",
     "presidio-analyzer>=2.2.0",
     "presidio-image-redactor>=0.0.50",
     "pillow>=10.0.0",
     "python-json-logger>=2.0.0",
     "spacy>=3.7.0",
-    "typer>=0.9.0",                    # Required by spacy CLI (spacy declares typer-slim but imports typer)
+    "typer>=0.9.0",
 ]
 
 [project.optional-dependencies]
