doc: updated readme, added necessary docs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,5 +48,8 @@
         "**/.mypy_cache": true,
         "**/.ruff_cache": true,
         "**/node_modules": true
-    }
+    },
+    "cursorpyright.analysis.autoImportCompletions": true,
+    "cursorpyright.analysis.diagnosticMode": "workspace",
+    "cursorpyright.analysis.typeCheckingMode": "basic"
 }
