--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ dependencies = [
     "python-json-logger>=2.0.0",
     "spacy>=3.7.0",
     "typer>=0.9.0",
+    "pip>=24.0",                       # Ensure pip is available for spacy model downloads
 ]
 
 [project.optional-dependencies]
