feat: sped up tests even more

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,9 +33,9 @@ repos:
         pass_filenames: false
         always_run: true
 
-      # - id: test
-      #   name: run tests
-      #   entry: make test
-      #   language: system
-      #   pass_filenames: false
-      #   always_run: true
+      - id: test
+        name: run tests
+        entry: make test
+        language: system
+        pass_filenames: false
+        always_run: true
