--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dependencies = [
     "spacy>=3.7.0",
     "typer>=0.9.0",
     "pip>=24.0",                       # Ensure pip is available for spacy model downloads
+    "pypdfium2>=4.0.0",                # PDF text/image extraction and manipulation
 ]
 
 [project.optional-dependencies]
@@ -126,7 +127,7 @@ module = "litellm.*"
 ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
-module = ["PIL.*", "presidio_image_redactor.*"]
+module = ["PIL.*", "presidio_image_redactor.*", "pypdfium2.*"]
 ignore_missing_imports = true
 
 [tool.pytest.ini_options]
